# data_struct_learning

./: CMakeLists.txt
dlinklist/: dlinklist.c  dlinklist.h
linkstack/: link_stack_test.c  linkstack.c  linkstack.h
myTree/: demo1_construct_tree.c  traversal_tree.c
mylist/: linklist.c  linklist.h  listTest.c
mystack/: seqlist.c  seqstack.c  seqstack.h  stack_test.c
stack_demo/: infix_To_suffix.c  linklist.c  linkstack.c
xianxingbiao/: seqlist.h  test1.c
